test/pass/25-empty_main.perk
import "stdio.h"

fun main () : int {
    skip
}