test/fail/04-missing_return_type.perk
import "stdio.h"

fun main() {
    printf("This file is expected to fail due to a missing return type.");
}